[package]
name = "paroxy-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
clap = {version = "3.2.8", features = ["derive"]}
serde = {version = "1.0", features = ["derive", "rc"]}

[features]
debug = []

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort' 
strip = true