[package]
name = "visualize-sort-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
notan = { version = "0.5.1", features = ["egui"] }
rand = "0.8.5"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort' 
strip = true
