[package]
name = "two-sum"
description = "Find indices of two numbers that add upto targe"
authors = ["Haisham <47662901+m-haisham@users.noreply.github.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["cargo"] }
